--- a/SpeechOnly/SpeechOnly.csproj
+++ b/SpeechOnly/SpeechOnly.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
     <AWSProjectType>Lambda</AWSProjectType>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Alexa.NET.APL" Version="4.0.11" />
+    <PackageReference Include="Alexa.NET.APL" Version="4.0.12" />
     <PackageReference Include="Alexa.NET.RequestHandlers" Version="4.0.0" />
     <PackageReference Include="Amazon.Lambda.Core" Version="1.1.0" />
     <PackageReference Include="Amazon.Lambda.Serialization.Json" Version="1.5.0" />
