Added basic display (#1)
* Add help intent

* update launch text

* Adding basics

* make app name funcrtion led

* fix roller slot values

* add session persistence

* change name to roll caster

* credit dice icon

* add assets

* add assets

* add shrunk version of background

* Update APL nuget package

* add transition to roll

* add version to import

--- a/SpellCastingHandlers/SpellCastingHandlers.csproj
+++ b/SpellCastingHandlers/SpellCastingHandlers.csproj
@@ -1,13 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Alexa.NET.APL" Version="4.0.7" />
+    <PackageReference Include="Alexa.NET.APL" Version="4.0.13" />
     <PackageReference Include="Alexa.NET.InSkillPricing" Version="2.1.0" />
-    <PackageReference Include="Alexa.NET.RequestHandlers" Version="3.1.0" />
+    <PackageReference Include="Alexa.NET.RequestHandlers" Version="4.0.0" />
   </ItemGroup>
 
   <ItemGroup>
